--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     test {
         useJUnitPlatform()
     }
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.3.1'
+
 }
 
 tasks.named('test') {
